--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
+<title>
+    The RPG
+</title>
+<script>
+    function onClickHi()
+    {
+        alert("안녕하세요");
+    }
+</script>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Hello World</h1>
+    <p>I'm hosted with GitHub Pages.</p>
+    <botton onclick="onClickHi()">HI</botton>
+    
 </body>
 </html>
