--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p>
+    SeoPangs' Page
+</p>
+<a href="/Portfolio/" style="font-size: 25px;">
+    Portfolio
+</a>
 </body>
 </html>
