--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MFWeb2.loader.js";
+      var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MFWeb2.data.unityweb",
-        frameworkUrl: buildUrl + "/MFWeb2.framework.js.unityweb",
-        codeUrl: buildUrl + "/MFWeb2.wasm.unityweb",
+        dataUrl: buildUrl + "/build.data.gz",
+        frameworkUrl: buildUrl + "/build.framework.js.gz",
+        codeUrl: buildUrl + "/build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MandarineFarm",
         productName: "Light Up Life",
